# anylearning

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-publish.yml
anylearning/: anylabeling2yolo.py  converter.py  utils.py
notebooks/: yolov10-object-detection.ipynb
