[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anylearning"
version = "0.0.3"
description = "Train your own AI models with ease"
authors = [
    {name = "Viet Anh Nguyen", email = "vietanh.dev@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv-python==4.10.0.84",
    "numpy==2.0.1",
    "scikit-learn==1.5.1",
    "scipy==1.14.0",
    "pre-commit==3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/vietanhdev/anylearning"
"Bug Tracker" = "https://github.com/vietanhdev/anylearning/issues"

[project.optional-dependencies]
dev = ["flake8", "isort", "black", "pre-commit"]

[tool.setuptools]
packages = ["anylearning"]
